syntax = "proto3";

package io.apicurio.registry.kafka.proto;

option java_package = "io.apicurio.registry.kafka.proto";

option java_outer_classname = "Reg";

message UUID {
    fixed64 msb = 1;
    fixed64 lsb = 2;
}

enum ActionType {
    UNDEFINED = 0;
    // crud
    CREATE = 1;
    READ = 2;
    UPDATE = 3;
    DELETE = 4;
}

message ArtifactValue {
    int32 artifactType = 1;
    fixed64 id = 2;
    bytes content = 3;
}

message MetaDataValue {
    string name = 1;
    string description = 2;
}

message RuleValue {
    enum Type {
        __NONE = 0;
        VALIDITY = 1;
        COMPATIBILITY = 2;
    }
    Type type = 1;
    string configuration = 2;
}

message SnapshotValue {
    fixed64 timestamp = 1;
}

enum ValueType {
    __INVALID = 0;
    // crud
    ARTIFACT = 1;
    METADATA = 2;
    RULE = 3;
    SNAPSHOT = 4;
}

message RegistryValue {
    ActionType type = 1;
    string artifactId = 2;
    fixed64 version = 3;
    ValueType vt = 4;
    oneof value {
        ArtifactValue artifact = 5;
        MetaDataValue metadata = 6;
        RuleValue rule = 7;
        SnapshotValue snapshot = 8;
    }
}